--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "eslint": "^9.19.0",
     "globals": "^15.14.0",
     "nodemon": "^3.1.9"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.10.0"
   }
 }
