--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,6 @@ PORT=8001 # Your port
 MONGODB_URI= # Your MongoDB URI
 NODE_ENV= # development or production
 JWT_SECRET= # jwt secret here
+CLOUDINARY_CLOUD_NAME= # Your Cloudinary cloud name
+CLOUDINARY_API_KEY= # Your Cloudinary API key
+CLOUDINARY_API_SECRET= # Your Cloudinary API secret
