--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
 PORT=8001 # Your port
+CORS_ORIGIN= # Your CORS origin / frontend URL
 MONGODB_URI= # Your MongoDB URI
 NODE_ENV= # development or production
 JWT_SECRET= # jwt secret here
